<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

  <data>
    <variable
        name="model"
        type="com.huytran.uthus.data.model.Beer"/>
    <variable
        name="listener"
        type="com.huytran.uthus.viewmodel.ChildFragmentViewModel"/>
  </data>

  <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      android:layout_height="wrap_content"
      android:layout_width="match_parent"
      android:id="@+id/cvMovie"
      app:cardBackgroundColor="@android:color/transparent"
      android:foreground="@drawable/black_border"
      style="@style/MyCardViewStyle"
      android:layout_margin="4dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/clCategory"
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:paddingHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

      <androidx.appcompat.widget.AppCompatImageView
          android:layout_width="70dp"
          android:layout_height="70dp"
          android:id="@+id/imgBeer"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintBottom_toTopOf="@+id/edtNotice"
          urlImage="@{model.image.toString()}"
          tools:src="@drawable/empty_pictures"
          />
<!--     app:srcCompat="@drawable/img_category_person"-->

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/txtCategoryName"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:fontFamily="@font/lato"
          android:textSize="14sp"
          android:textStyle="bold"
          android:paddingEnd="10dp"
          android:maxLines="2"
          android:layout_marginStart="10dp"
          android:layout_marginTop="5dp"
          android:textAlignment="textStart"
          android:textColor="@color/color_E3A063"
          app:layout_constraintStart_toEndOf="@+id/imgBeer"
          app:layout_constraintEnd_toStartOf="@+id/btnSave"
          app:layout_constraintTop_toTopOf="@+id/imgBeer"
          android:text='@{model.name,default="null"}'
          tools:text="Beer Name" />
<!--      android:text='@{model.name,default="null"}'-->

      <androidx.appcompat.widget.AppCompatButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/btnSave"
          android:layout_marginEnd="10dp"
          app:layout_constraintEnd_toStartOf="@+id/btnUpdate"
          app:layout_constraintTop_toTopOf="@+id/txtCategoryName"
          android:text="@string/save"
          buttonSaveVisibility="@{model.favorite}"
          android:background="@drawable/custom_background_color"
          android:textColor="@color/white"
          android:onClick="@{()->listener.btnSaveOrDeleteEvent(model)}"
          />
<!--      android:onClick="@{()->listener.btnSaveOrDeleteEvent(model)}"-->

      <androidx.appcompat.widget.AppCompatButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/btnDelete"
          app:layout_constraintStart_toStartOf="@+id/btnSave"
          app:layout_constraintEnd_toEndOf="@+id/btnSave"
          app:layout_constraintTop_toTopOf="@+id/txtCategoryName"
          android:text="@string/delete"
          buttonVisibility="@{model.favorite}"
          android:background="@drawable/custom_background_color"
          android:textColor="@color/white"
          android:onClick="@{()->listener.btnDeleteEvent(model)}"
          />

      <androidx.appcompat.widget.AppCompatButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/btnUpdate"
          app:layout_constraintStart_toEndOf="@+id/btnDelete"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="@+id/txtCategoryName"
          android:text="@string/update"
          buttonVisibility="@{model.favorite}"
          android:background="@drawable/custom_background_color"
          android:textColor="@color/white"
          android:onClick="@{()->listener.btnUpdateEvent(model)}"
          />


      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/txtBeerPrice"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:fontFamily="@font/lato"
          android:textSize="14sp"
          android:textStyle="bold"
          android:visibility="visible"
          android:layout_marginStart="10dp"
          android:layout_marginTop="10dp"
          android:textAlignment="center"
          android:textColor="@color/color_E3A063"
          app:layout_constraintTop_toBottomOf="@+id/txtCategoryName"
          app:layout_constraintStart_toEndOf="@+id/imgBeer"
          tools:text="Beer Name" />

      <!--    <androidx.appcompat.widget.AppCompatEditText-->
      <!--        android:layout_width="match_parent"-->
      <!--        android:layout_height="wrap_content"-->
      <!--        android:id="@+id/edtNotice"-->
      <!--        app:layout_constraintTop_toBottomOf="@+id/imgBeer"-->
      <!--        app:layout_constraintStart_toStartOf="parent"-->
      <!--        tools:hint="Note"-->
      <!--        />-->

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/edtNotice"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingBottom="10dp"
          app:layout_constraintTop_toBottomOf="@+id/imgBeer"
          app:layout_constraintStart_toStartOf="parent"
          android:hint="@string/note"
          android:textColorHint="@android:color/darker_gray"
          app:hintTextColor="@android:color/darker_gray"
          app:helperTextEnabled="true"
          app:fontFamily="@font/lato"
          app:helperTextTextColor="@color/color_91E2B7"
          android:focusable="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtNotice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            app:fontFamily="@font/lato"
            android:inputType="text"
            android:text='@{model.note, default=""}'
            />

      </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

  </androidx.cardview.widget.CardView>
</layout>
