<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>
    <variable
      name="viewModel"
      type="com.huytran.entrancetest.viewmodel.SignUpViewModel"/>
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/addLayout"
    tools:context=".view.activities.SignUpActivity">


      <androidx.appcompat.widget.AppCompatImageView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:id="@+id/imgPerson"
          app:srcCompat="@drawable/img_person_background"
          app:layout_constraintTop_toTopOf="parent"
          android:scaleType="fitStart"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent" />

      <androidx.appcompat.widget.AppCompatImageView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:id="@+id/img_night_background1"
          app:srcCompat="@drawable/img_night_background"
          app:layout_constraintTop_toTopOf="parent"
          android:scaleType="fitXY"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintBottom_toBottomOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:id="@+id/cslSignUp"
        android:onClick="@{()-> viewModel.createNewUser()}"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/ellipse_signup_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_signup_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:fontFamily="@font/lato"
        android:layout_marginStart="26dp"
        app:layout_constraintTop_toTopOf="@+id/cslSignUp"
        app:layout_constraintBottom_toBottomOf="@+id/cslSignUp"
        app:layout_constraintStart_toStartOf="parent"
        />

      <androidx.appcompat.widget.AppCompatTextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/txt_terms"
          android:layout_marginStart="24dp"
          android:layout_marginEnd="40dp"
          android:text=""
          android:textSize="12sp"
          android:lineHeight="20sp"
          app:fontFamily="@font/lato"
          android:layout_marginBottom="30dp"
          android:textColor="@android:color/darker_gray"
          app:layout_constraintBottom_toTopOf="@+id/cslSignUp"
          app:layout_constraintStart_toStartOf="parent"
          />

      <androidx.appcompat.widget.AppCompatCheckBox
          android:layout_width="23dp"
          android:layout_height="23dp"
          android:layout_marginStart="24dp"
          android:layout_marginBottom="29dp"
          android:checked="@={viewModel.isChecked}"
          android:button="@drawable/customdrawablecheckbox"
          android:id="@+id/cbAgree16YearsOld"
          app:layout_constraintBottom_toTopOf="@+id/txt_terms"
          app:layout_constraintStart_toStartOf="parent"
          />

      <androidx.appcompat.widget.AppCompatTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:text="I am over 16 years of age"
          android:textSize="14sp"
          app:fontFamily="@font/lato"
          android:textColor="@color/white"
          app:layout_constraintTop_toTopOf="@+id/cbAgree16YearsOld"
          app:layout_constraintBottom_toBottomOf="@+id/cbAgree16YearsOld"
          app:layout_constraintStart_toEndOf="@+id/cbAgree16YearsOld"
          />

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/textPasswordFieldContains"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="50dp"
          android:layout_marginHorizontal="24dp"
          android:textColorHint="@android:color/darker_gray"
          app:layout_constraintBottom_toTopOf="@+id/cbAgree16YearsOld"
          android:hint="@string/password"

          app:hintTextColor="@android:color/darker_gray"
          app:endIconMode="password_toggle"
          app:passwordToggleEnabled="true"
          app:fontFamily="@font/lato"
          app:helperTextEnabled="true"
          app:helperTextTextColor="@color/color_91E2B7">

<!--          android:theme="@style/TextInputLayoutAppearance"-->

          <com.google.android.material.textfield.TextInputEditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/textPasswordField"
              android:textColor="@color/white"
              app:fontFamily="@font/lato"
              android:maxLength="18"
              android:inputType="textPassword"
              android:text="@={viewModel.password}"
              />

      </com.google.android.material.textfield.TextInputLayout>




      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/textEmailFieldContains"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="26dp"
          android:layout_marginHorizontal="24dp"
          app:layout_constraintBottom_toTopOf="@+id/textPasswordFieldContains"
          android:hint="@string/email"
          android:textColorHint="@android:color/darker_gray"
          app:hintTextColor="@android:color/darker_gray"
          app:helperTextEnabled="true"
          app:fontFamily="@font/lato"
          app:helperTextTextColor="@color/color_91E2B7"
          android:focusable="true">

<!--          android:theme="@style/TextInputLayoutAppearance"-->


          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/textEmailField"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textColor="@color/white"
              app:fontFamily="@font/lato"
              android:inputType="textEmailAddress"
              android:text="@={viewModel.email}"
              />

      </com.google.android.material.textfield.TextInputLayout>

      <androidx.appcompat.widget.AppCompatTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="24dp"
          android:layout_marginBottom="41dp"
          android:text="@string/let_get_you_started"
          android:textColor="@color/white"
          android:textSize="22sp"
          app:fontFamily="@font/lato"
          app:layout_constraintBottom_toTopOf="@+id/textEmailFieldContains"
          app:layout_constraintStart_toStartOf="parent" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>